deployment files updated/ready for review

--- a/k8s/dev/dcuvalidator.deployment.yml
+++ b/k8s/dev/dcuvalidator.deployment.yml
@@ -1,9 +1,9 @@
 ---
-dcuValidatorVersion: "extensions/v1beta1"
+apiVersion: "extensions/v1beta1"
 kind: "Deployment"
 metadata:
   name: "validator"
-  namespace: "dcu-validator-dev"
+  namespace: "abuse-api-dev"
   labels:
     app: "validator"
 spec:
@@ -39,22 +39,18 @@ spec:
             value: "3600"
           - name: "LIVENESS_FACTOR"
             value: "0.2"
-# TODO: Verify if project will use redis for the scheduler
-          - name: REDIS_HOST
-            value: redis.dcu-validator-dev.svc.cluster.local
+# TODO: Name of Value TBD
+          - name: REDLOCK_HOST
+            value: redis.tbd-dev.svc.cluster.local
           - name: KEYFILE
             value: /keyfiles/key.txt
-# TODO: What Keyfile items will we need
-          - name: SNOW_PASS
+          - name: DB_PASS
             valueFrom:
               secretKeyRef:
-                name: svc-snow
+                name: db-phishnet
                 key: password
-          - name: BROKER_PASS
-            valueFrom:
-              secretKeyRef:
-                name: amqp-api
-                key: password
+          - name: ABUSE_API_UPDATE_URL
+            value: http://api.abuse-api-dev.svc.cluster.local:5000/v1/abuse/tickets
           volumeMounts:
           - name: encryption-keys
             mountPath: /keyfiles
