--- a/k8s/ote/dcuvalidator.service.yml
+++ b/k8s/ote/dcuvalidator.service.yml
@@ -1,13 +1,13 @@
 ---
   kind: "Service"
-  dcuValidatorVersion: "v1"
+  apiVersion: "v1"
   metadata:
     labels:
       app: "validator"
     # this name is accessible via cluster DNS
     # ("redis" or "validator.<namespace>.svc.cluster.local")
     name: "validator"
-    namespace: dcu-validator-ote
+    namespace: abuse-api-ote
   spec:
     ports:
       -
