--- a/k8s/prod/dcuvalidator.service.yml
+++ b/k8s/prod/dcuvalidator.service.yml
@@ -1,18 +1,18 @@
 ---
   kind: "Service"
-  dcuValidatorVersion: "v1"
+  apiVersion: "v1"
   metadata:
     labels:
       app: "validator"
     # this name is accessible via cluster DNS
     # ("redis" or "validator.<namespace>.svc.cluster.local")
     name: "validator"
-    namespace: dcu-validator-prod
+    namespace: abuse-api-prod
   spec:
     ports:
       -
         name: "validator"
-        port: 5000
+        port: 80
         targetPort: 5000
     selector:
       app: "validator"
