--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ __pycache__/
 #vscode
 .vscode
 
+#docker-compose
+docker-compose.yml
+
 # Distribution / packaging
 .Python
 env/
@@ -50,6 +53,7 @@ coverage.xml
 *.cover
 .hypothesis/
 .noseids
+cover
 
 # Translations
 *.mo
