--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ __pycache__/
 #vscode
 .vscode
 
+#docker-compose
+docker-compose.yml
+
 # Distribution / packaging
 .Python
 env/
@@ -53,6 +56,7 @@ coverage.xml
 *.cover
 .hypothesis/
 .noseids
+cover
 
 # Translations
 *.mo
