--- a/k8s/ote/dcuvalidator.deployment.yml
+++ b/k8s/ote/dcuvalidator.deployment.yml
@@ -51,6 +51,18 @@ spec:
                 key: password
           - name: ABUSE_API_UPDATE_URL
             value: http://api.abuse-api-ote.svc.cluster.local:5000/v1/abuse/tickets
+          - name: DB_USER
+            value: sau_o_phish
+          - name: DB_HOST
+            value: 10.22.9.209:27017
+          - name: DB
+            value: otephishstory
+          - name: scheduler
+            value: # TODO
+          - name: LOG_CFG
+            value: # TODO
+          - name: sysenv
+            value: ote
           volumeMounts:
           - name: encryption-keys
             mountPath: /keyfiles
