--- a/k8s/prod/dcuvalidator.deployment.yml
+++ b/k8s/prod/dcuvalidator.deployment.yml
@@ -23,31 +23,22 @@ spec:
           imagePullPolicy: "Always"
           image: "artifactory.secureserver.net:10014/docker-dcu-local/debug:latest"
         -
-          name: "validator"
+          name: "validator-rest"
           imagePullPolicy: "Always"
-          image: "artifactory.secureserver.net:10014/docker-dcu-local/dcu-validator:REPLACE_WITH_GIT_COMMIT"
-          livenessProbe:
-            exec:
-              command:
-              - /app/kubetipper.sh
-            initialDelaySeconds: 120
-            periodSeconds: 120
-            failureThreshold: 1
+          image: "artifactory.secureserver.net:10014/docker-dcu-local/dcu-validator-rest:prod"
+          env:
+          - name: scheduler
+            value: localhost
+        -
+          name: "validator-scheduler"
+          imagePullPolicy: "Always"
+          image: "artifactory.secureserver.net:10014/docker-dcu-local/dcu-validator-scheduler:prod"
           env:
           - name: BUILD_DATE
             value: 'THIS_STRING_IS_REPLACED_DURING_BUILD'
-          - name: HTTP_ONLY
-            value: 'true'
-          - name: "LIVENESS_TTL"
-            value: "3600"
-          - name: "LIVENESS_FACTOR"
-            value: "0.2"
-# TODO: Name of Value TBD
-          - name: REDLOCK_HOST
-            value: redis.tbd-prod.svc.cluster.local
-          - name: KEYFILE
-            value: /keyfiles/key.txt
-          - name: DB_PASS
+          - name: REDIS
+            value: phishnet-redis.abuse-api-dev.svc.cluster.local
+         - name: DB_PASS
             valueFrom:
               secretKeyRef:
                 name: db-phishnet
@@ -60,18 +51,5 @@ spec:
             value: 10.22.9.209:27017
           - name: DB
             value: phishstory
-          - name: scheduler
-            value: # TODO
-          - name: LOG_CFG
-            value: # TODO
           - name: sysenv
             value: prod
-          volumeMounts:
-          - name: encryption-keys
-            mountPath: /keyfiles
-            readOnly: true
-
-      volumes:
-        - name: encryption-keys
-          secret:
-            secretName: encryption-key-files
