--- a/k8s/ote/dcuvalidator.deployment.yml
+++ b/k8s/ote/dcuvalidator.deployment.yml
@@ -19,29 +19,21 @@ spec:
           name: "k8s-artifactory-creds"
       containers:
         -
-          name: "validator"
+          name: "validator-rest"
           imagePullPolicy: "Always"
-          image: "artifactory.secureserver.net:10014/docker-dcu-local/dcu-validator:ote"
-# TODO: research liveness probe api example, ote and prod much different here
-          livenessProbe:
-            exec:
-              command:
-              - /app/kubetipper.sh
-            initialDelaySeconds: 120
-            periodSeconds: 120
-            failureThreshold: 1
+          image: "artifactory.secureserver.net:10014/docker-dcu-local/dcu-validator-rest:ote"
+          env:
+          - name: scheduler
+            value: localhost
+        -
+          name: "validator-scheduler"
+          imagePullPolicy: "Always"
+          image: "artifactory.secureserver.net:10014/docker-dcu-local/dcu-validator-scheduler:ote"
           env:
           - name: BUILD_DATE
             value: 'THIS_STRING_IS_REPLACED_DURING_BUILD'
-          - name: HTTP_ONLY
-            value: 'true'
-          - name: "LIVENESS_TTL"
-            value: "3600"
-          - name: "LIVENESS_FACTOR"
-            value: "0.2"
-# TODO: Name of Value TBD
-          - name: REDLOCK_HOST
-            value: redis.tbd-ote.svc.cluster.local
+          - name: REDIS
+            value: phishnet-redis.abuse-api-ote.svc.cluster.local
           - name: KEYFILE
             value: /keyfiles/key.txt
           - name: DB_PASS
@@ -57,18 +49,5 @@ spec:
             value: 10.22.9.209:27017
           - name: DB
             value: otephishstory
-          - name: scheduler
-            value: # TODO
-          - name: LOG_CFG
-            value: # TODO
           - name: sysenv
             value: ote
-          volumeMounts:
-          - name: encryption-keys
-            mountPath: /keyfiles
-            readOnly: true
-
-      volumes:
-        - name: encryption-keys
-          secret:
-            secretName: encryption-key-files
