--- a/k8s/prod/dcuvalidator.deployment.yml
+++ b/k8s/prod/dcuvalidator.deployment.yml
@@ -25,25 +25,12 @@ spec:
         -
           name: "validator-rest"
           imagePullPolicy: "Always"
-          image: "artifactory.secureserver.net:10014/docker-dcu-local/dcu-validator-rest:prod"
+          image: "artifactory.secureserver.net:10014/docker-dcu-local/dcu-validator-api:REPLACE_WITH_GIT_COMMIT"
           env:
           - name: BUILD_DATE
             value: 'THIS_STRING_IS_REPLACED_DURING_BUILD'
           - name: REDIS
             value: phishnet-redis.abuse-api-prod.svc.cluster.local
-         - name: DB_PASS
-            valueFrom:
-              secretKeyRef:
-                name: db-phishnet
-                key: password
-          - name: ABUSE_API_UPDATE_URL
-            value: http://api.abuse-api-prod.svc.cluster.local:5000/v1/abuse/tickets
-          - name: DB_USER
-            value: sau_p_phish
-          - name: DB_HOST
-            value: 10.22.9.209:27017
-          - name: DB
-            value: phishstory
           - name: sysenv
             value: prod
           - name: scheduler
@@ -51,13 +38,13 @@ spec:
         -
           name: "validator-scheduler"
           imagePullPolicy: "Always"
-          image: "artifactory.secureserver.net:10014/docker-dcu-local/dcu-validator-scheduler:prod"
+          image: "artifactory.secureserver.net:10014/docker-dcu-local/dcu-validator-scheduler:REPLACE_WITH_GIT_COMMIT"
           env:
           - name: BUILD_DATE
             value: 'THIS_STRING_IS_REPLACED_DURING_BUILD'
           - name: REDIS
             value: phishnet-redis.abuse-api-prod.svc.cluster.local
-         - name: DB_PASS
+          - name: DB_PASS
             valueFrom:
               secretKeyRef:
                 name: db-validator
@@ -70,5 +57,7 @@ spec:
             value: 10.22.9.209:27017
           - name: DB
             value: phishstory
+          - name: COLLECTION
+            value: incidents
           - name: sysenv
             value: prod
