Finished validate function

--- a/k8s/ote/dcuvalidator.deployment.yml
+++ b/k8s/ote/dcuvalidator.deployment.yml
@@ -55,5 +55,12 @@ spec:
             value: otephishstory
           - name: COLLECTION
             value: incidents
+          - name: ABUSE_API_UPDATE_URL
+            value: http://api.abuse-api-ote.svc.cluster.local:5000/v1/abuse/tickets
+          - name: API_TOKEN
+            valueFrom:
+              secretKeyRef:
+                name: validator-token
+                key: token
           - name: sysenv
             value: ote
