--- a/k8s/dev/dcuvalidator.deployment.yml
+++ b/k8s/dev/dcuvalidator.deployment.yml
@@ -62,5 +62,12 @@ spec:
             value: devphishstory
           - name: COLLECTION
             value: incidents
+          - name: ABUSE_API_UPDATE_URL
+            value: http://api.abuse-api-dev.svc.cluster.local:5000/v1/abuse/tickets
+          - name: API_TOKEN
+            valueFrom:
+              secretKeyRef:
+                name: validator-token
+                key: token
           - name: sysenv
             value: dev
