--- a/k8s/ote/dcuvalidator.deployment.yml
+++ b/k8s/ote/dcuvalidator.deployment.yml
@@ -25,8 +25,6 @@ spec:
           env:
           - name: BUILD_DATE
             value: 'THIS_STRING_IS_REPLACED_DURING_BUILD'
-          - name: REDIS
-            value: phishnet-redis.abuse-api-ote.svc.cluster.local
           - name: sysenv
             value: ote
           - name: scheduler
@@ -38,29 +36,39 @@ spec:
           env:
           - name: BUILD_DATE
             value: 'THIS_STRING_IS_REPLACED_DURING_BUILD'
+          - name: sysenv
+            value: ote
           - name: REDIS
             value: phishnet-redis.abuse-api-ote.svc.cluster.local
           - name: DB_PASS
             valueFrom:
               secretKeyRef:
-                name: db-phishnet
+                name: db-validator
                 key: password
-          - name: ABUSE_API_UPDATE_URL
-            value: http://api.abuse-api-ote.svc.cluster.local:5000/v1/abuse/tickets
           - name: DB_USER
             value: sau_o_phish
           - name: DB_HOST
-            value: 10.22.9.209:27017
+            value: 10.22.9.209
           - name: DB
             value: otephishstory
           - name: COLLECTION
             value: incidents
-          - name: ABUSE_API_UPDATE_URL
+          - name: API_UPDATE_URL
             value: http://api.abuse-api-ote.svc.cluster.local:5000/v1/abuse/tickets
           - name: API_TOKEN
             valueFrom:
               secretKeyRef:
-                name: validator-token
+                name: api-token
                 key: token
-          - name: sysenv
-            value: ote
+          - name: SMDB_USERNAME
+            valueFrom:
+              secretKeyRef:
+                name: smdb-validator
+                key: username
+          - name: SMDB_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: smdb-validator
+                key: password
+          - name: DOMAIN_SERVICE
+            value: domainservice-rest.abuse-api-ote.svc.cluster.local:8080
