--- a/scheduler/Dockerfile
+++ b/scheduler/Dockerfile
@@ -2,7 +2,7 @@
 #
 #
 
-FROM artifactory.secureserver.net:10014/docker-dcu-local/grpcio
+FROM docker-dcu-local.artifactory.secureserver.net/grpcio
 MAINTAINER DCUENG <dcueng@godaddy.com>
 
 # Best Practice - Creating a user instead of running as root
