--- a/rest/Makefile
+++ b/rest/Makefile
@@ -6,8 +6,24 @@ PRIVDEPS=
 
 .PHONY: prep build
 
-all: prep build
+all: env
 
+env:
+	pip install -r test_requirements.txt
+	pip install -r requirements.txt
+
+.PHONY: flake8
+flake8:
+	@echo "----- Running linter -----"
+	flake8 --config ./.flake8 .
+
+.PHONY: isort
+isort:
+	@echo "----- Optimizing imports -----"
+	isort -rc --atomic --skip rest_service/grpc_stub .
+
+.PHONY: tools
+tools: flake8 isort
 
 prep:
 	@echo "----- preparing $(IMAGE) build -----"
