[CMAPT-2697] Add Testing & Test Coverage Make Directives (Validator) (#30)
* Added Testing & Test Coverage Make Directives to scheduler & rest pieces of DCU Validator

* updated README to include latest changes made to Makefile(s)

* made small changes to READMe to include special instructions regarding grpcio-tools & updated scheduler and rest Makefiles to run tests before deploy can complete

* updated README.md and all Makefiles so that parent and sub project levels are able to provide more options to developers regarding running tests, flake8, isort, installing dependencies, etc.

* Fixes Docker images not being created and simplifies tools

* Simplified Makefile and add new gRPC stub code

--- a/rest/Makefile
+++ b/rest/Makefile
@@ -6,7 +6,7 @@ PRIVDEPS=
 
 .PHONY: prep build
 
-all: build
+all: env
 
 env:
 	pip install -r test_requirements.txt
@@ -24,6 +24,16 @@ isort:
 
 .PHONY: tools
 tools: flake8 isort
+
+.PHONY: test
+test:
+	@echo "----- Running tests -----"
+	nosetests tests
+
+.PHONY: testcov
+testcov:
+	@echo "----- Running tests with coverage -----"
+	nosetests tests --with-coverage --cover-erase --cover-package=rest_service
 
 prep:
 	@echo "----- preparing $(IMAGE) build -----"
