Rename .yml to .yaml (#38)

--- a/rest/Dockerfile
+++ b/rest/Dockerfile
@@ -24,7 +24,7 @@ RUN apk update && \
 EXPOSE 5000
 
 # Move files to new directory in docker container
-COPY ./*.ini ./*.sh ./run.py ./*.yml /app/
+COPY ./*.ini ./*.sh ./run.py ./*.yaml /app/
 COPY . /tmp
 RUN chown dcu:dcu -R /app
 
