--- a/scheduler/Dockerfile
+++ b/scheduler/Dockerfile
@@ -22,7 +22,7 @@ RUN apk update && \
 EXPOSE 50051
 
 # Move files to new directory in docker container
-COPY ./*.ini ./*.sh ./run.py ./*.yml /app/
+COPY ./*.ini ./*.sh ./run.py ./*.yaml /app/
 COPY . /tmp
 RUN chown dcu:dcu -R /app
 
