--- a/rest/uwsgi.ini
+++ b/rest/uwsgi.ini
@@ -1,16 +1,23 @@
 [uwsgi]
 master=true
+need-app = true                         # Without this option, uWSGI will ignore syntax/import errors at startup and start an empty shell that returns 500s
 uid = dcu
 gid = dcu
-cheaper=2
-cheaper-initial=5
-workers = 10
-cheaper-step=1
+
+cheaper = 2                             # minimum number of workers to keep at all times
+cheaper-initial = 5                     # minimum number of workers to spawn at startup
+workers = 32                            # maximum number of workers
+cheaper-step = 1                        # spawn at most 1 worker at once
+
 threads = 8
 vacuum=true
 buffer-size=32768
 http = 0.0.0.0:5000
 ini=:base
+
+# Server Monitoring
+stats = 0.0.0.0:3031
+stats-http
 
 [base]
 chdir=/app
