--- a/scheduler/requirements.txt
+++ b/scheduler/requirements.txt
@@ -1,10 +1,10 @@
-pyaml
-grpcio
-apscheduler
-netaddr
-dnspython
+pyaml==19.12.0
+grpcio==1.11.0
+APScheduler==3.6.3
+netaddr==0.7.19
+dnspython==1.16.0
 redlock==1.2.0
-requests
-suds
-python-ntlm
-protobuf
+requests==2.22.0
+suds==0.4
+python-ntlm==1.1.0
+protobuf==3.5.2.post1
