--- a/k8s/dev/deployment.yaml
+++ b/k8s/dev/deployment.yaml
@@ -27,9 +27,7 @@ spec:
           image: "docker-dcu-local.artifactory.secureserver.net/dcu-validator-api:dev"
           env:
           - name: BUILD_DATE
-            value: 'THIS_STRING_IS_REPLACED_DURING_BUILD'
-          - name: sysenv
-            value: dev
+            value: "THIS_STRING_IS_REPLACED_DURING_BUILD"
           - name: scheduler
             value: localhost
         -
@@ -38,11 +36,13 @@ spec:
           image: "docker-dcu-local.artifactory.secureserver.net/dcu-validator-scheduler:dev"
           env:
           - name: BUILD_DATE
-            value: 'THIS_STRING_IS_REPLACED_DURING_BUILD'
-          - name: sysenv
-            value: dev
+            value: "THIS_STRING_IS_REPLACED_DURING_BUILD"
           - name: REDIS
             value: phishnet-redis.abuse-api-dev.svc.cluster.local
+          - name: MIN_PERIOD
+            value: "300"
+          - name: MAX_PERIOD
+            value: "90000"
           - name: DB_PASS
             valueFrom:
               secretKeyRef:
@@ -56,6 +56,8 @@ spec:
             value: devphishstory
           - name: COLLECTION
             value: incidents
+          - name: JOBS_COLLECTION
+            value: jobs
           - name: API_UPDATE_URL
             value: http://api.abuse-api-dev.svc.cluster.local:5000/v1/abuse/tickets
           - name: API_TOKEN
