Upgrade dcu-validator to python3 (#49)
* Upgrade to python3

* Update references to grpcio-tools

* Remove redundant copies

* Prevent a make from building the docker images

* Fix pycharm complaints

* Move print based logs to the system logger

* Cleanup instructions/docker/code to run locally

* Specify namespace explicitly

* Cleanup documentation and standardize kubernetes namespace names

--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,6 @@ __pycache__/
 #vscode
 .vscode
 
-#docker-compose
-docker-compose.yml
-
 # Distribution / packaging
 .Python
 env/
@@ -111,3 +108,6 @@ ENV/
 
 # mypy
 .mypy_cache/
+.tool-versions
+
+.envrc
