--- a/scheduler/Dockerfile
+++ b/scheduler/Dockerfile
@@ -1,37 +1,17 @@
-# dcu-validator-scheduler
-#
-#
-
-FROM docker-dcu-local.artifactory.secureserver.net/grpcio
-MAINTAINER DCUENG <dcueng@godaddy.com>
+FROM python:3.7.10-slim
+LABEL MAINTAINER=dcueng@godaddy.com
 
 # Best Practice - Creating a user instead of running as root
-RUN addgroup -S dcu && adduser -H -S -G dcu dcu
-
-# apt-get installs
-RUN apk update && \
-    apk add --no-cache build-base \
-    ca-certificates \
-    libffi-dev \
-    linux-headers \
-    openssl-dev \
-    python-dev \
-    py-pip
-
+RUN addgroup dcu && adduser --disabled-password --disabled-login --no-create-home --ingroup dcu --system dcu
 # Expose grpc port 50051
 EXPOSE 50051
 
 # Move files to new directory in docker container
-COPY ./*.ini ./*.sh ./run.py ./*.yaml /app/
+COPY ./*.ini ./*.sh ./*.yaml ./*.py /app/
 COPY . /tmp
 RUN chown dcu:dcu -R /app
 
-# pip install from our private pips staged by our Makefile
-RUN for dep in dcdatabase; \
-  do \
-  pip install --compile "/tmp/private_deps/$dep"; \
-done
-COPY certs/* /usr/local/share/ca-certificates/
-RUN update-ca-certificates && pip install --compile /tmp && rm -rf /tmp/*
+RUN pip install --compile /tmp/private_deps/dcdatabase
+RUN pip install --compile /tmp && rm -rf /tmp/*
 
 ENTRYPOINT ["/app/runserver.sh"]
