--- a/rest/requirements.txt
+++ b/rest/requirements.txt
@@ -1,8 +1,21 @@
-Flask==1.1.1
+aniso8601==9.0.1
+attrs==20.3.0
+click==7.1.2
+Flask==1.1.2
 flask-restplus==0.13.0
-pyaml==19.12.0
-grpcio==1.11.0
-uWSGI==2.0.18
-protobuf==3.5.2.post1
-pyrsistent==0.16.1
-Werkzeug==0.16.0
+grpcio==1.36.1
+importlib-metadata==3.10.0
+itsdangerous==1.1.0
+Jinja2==2.11.3
+jsonschema==3.2.0
+MarkupSafe==1.1.1
+protobuf==3.15.6
+pyaml==20.4.0
+pyrsistent==0.17.3
+pytz==2021.1
+PyYAML==5.4.1
+six==1.15.0
+typing-extensions==3.7.4.3
+uWSGI==2.0.19.1
+Werkzeug==1.0.1
+zipp==3.4.1
