--- a/scheduler/requirements.txt
+++ b/scheduler/requirements.txt
@@ -1,10 +1,21 @@
-pyaml==19.12.0
-grpcio==1.11.0
-APScheduler==3.6.3
-netaddr==0.7.19
-dnspython==1.16.0
-redlock==1.2.0
-requests==2.22.0
-suds==0.4
+APScheduler==3.7.0
+certifi==2020.12.5
+chardet==4.0.0
+dcdatabase==1.2
+dnspython==2.1.0
+grpcio==1.36.1
+idna==2.10
+netaddr==0.8.0
+protobuf==3.15.6
+pyaml==20.4.0
+pymongo==3.11.3
 python-ntlm==1.1.0
-protobuf==3.5.2.post1
+pytz==2021.1
+PyYAML==5.4.1
+redis==3.5.3
+redlock==1.2.0
+requests==2.25.1
+six==1.15.0
+suds-py3==1.4.4.1
+tzlocal==2.1
+urllib3==1.26.4
