Move to use zeep, as suds isn't playing nice with the IPAM IIS instance (#51)
* Move to use zeep, as suds isn't playing nice with the IPAM IIS instance

* Re-enable SSL validation for IPAM access

--- a/scheduler/Dockerfile
+++ b/scheduler/Dockerfile
@@ -11,7 +11,15 @@ COPY ./*.ini ./*.sh ./*.yaml ./*.py /app/
 COPY . /tmp
 RUN chown dcu:dcu -R /app
 
+# install custom root certificates
+RUN mkdir -p /usr/local/share/ca-certificates/
+RUN cp /tmp/certs/* /usr/local/share/ca-certificates/
+RUN update-ca-certificates
+
 RUN pip install --compile /tmp/private_deps/dcdatabase
 RUN pip install --compile /tmp && rm -rf /tmp/*
+
+# Over-write the certifi shipped certificate with the system cert.
+RUN cp /etc/ssl/certs/ca-certificates.crt /usr/local/lib/python3.7/site-packages/certifi/cacert.pem
 
 ENTRYPOINT ["/app/runserver.sh"]
