--- a/rest/uwsgi.ini
+++ b/rest/uwsgi.ini
@@ -14,6 +14,7 @@ vacuum=true
 buffer-size=32768
 http = 0.0.0.0:5000
 ini=:base
+disable-logging = True
 
 # Server Monitoring
 stats = 0.0.0.0:3031
